--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,7 @@ body {
   height: 5rem;
   display: flex;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 .header-container {
@@ -82,33 +83,58 @@ body {
 
 /* Hero slider */
 .hero-container {
-  height: 25rem;
+  
 }
 
 .hero-slider {
   position: relative;
   overflow: hidden;
-  height: 100%;
+  height: 30rem;
   border-radius: 0.6rem;
+  background-color: var(--clr-glass);
 }
 
 .trending-item {
   position: absolute;
-  display: none;
+  height: 100%;
+  width: 100%;
+  /* display: none; */
 }
 
-.tranding-item-img {
-  position: relative;
-  height: auto;
+.trending-image-container {
+  height: 100%;
+}
+
+.trending-item-img {
+  height: 100%;
+  width: 100%;
   object-fit: cover;
   border-radius: 0.6rem;
   z-index: -1;
   opacity: 0.6;
+  background-color: var(--clr-glass);
 }
 
-.hero-content {
+.hero-item-content {
+  position: absolute;
+  max-width: 20rem;
   z-index: 1;
   color: hsl(var(--clr-light));
+  top: 10%;
+  left: 10%
+}
+
+.hero-item-title {
+  font-size: 2rem;
+  font-weight: 700;
+  text-shadow: #21242D 1px 0 10px;;
+}
+
+.hero-item-overview {
+  font-size: 0.8rem;
+  font-weight: 300;
+  text-shadow: #21242D 1px 0 10px;;
+  margin-bottom: 1rem;
 }
 
 .top-header {
@@ -208,7 +234,7 @@ body {
   margin-block: 2rem;
 }
 
-.btn-back {
+.btn {
   display: inline-flex;
   align-items: center;
   background-color: hsl(var(--clr-green));
@@ -290,6 +316,10 @@ body {
   margin-right: 1rem;
 }
 
+.details-facts > li.genres-hero {
+  background-color: transparent;
+}
+
 /* .details-facts > li:not(:last-child)::after {
   content: '';
   position: absolute;
@@ -320,10 +350,6 @@ body {
   margin-left: 0.5rem;
 }
 
-/* Cast slider */
-.details-cast-slider {
-  display: flex;
-}
 
 .genres {
   display: flex;
@@ -337,7 +363,11 @@ body {
 
 .genre:not(:last-child) {
   margin-right: 0.8rem;
-  
+}
+
+/* Cast slider */
+.details-cast-slider {
+  display: flex;
 }
 
 /* User reviews section */
