--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,6 +21,10 @@ body {
 /* ------------------- */
 /* Components          */
 /* ------------------- */
+
+/* ------------------- */
+/* Header (all pages)  */
+/* ------------------- */
 .header {
   padding: 0.8rem;
   height: 5rem;
@@ -80,6 +84,10 @@ body {
   background-color: hsl(var(--clr-green));
   color: hsl(var(--clr-light));
 }
+
+/* ------------------- */
+/* Home page           */
+/* ------------------- */
 
 /* Hero slider */
 .hero-container {
@@ -170,11 +178,12 @@ body {
 /* Slider container */
 .slider-container {
   display: flex;
+  gap: 1rem;
   padding-block-start: 2rem;
   overflow: hidden;
 }
 
-/* Slider card common styles */
+/* Mini card common styles */
 .card {
   min-width: 12.5rem;
   height: 100%;
@@ -185,10 +194,6 @@ body {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(7.1px);
   -webkit-backdrop-filter: blur(7.1px);
-}
-
-.card:not(:last-child) {
-  margin-right: 1rem;
 }
 
 .card-body {
@@ -208,21 +213,20 @@ body {
   margin-top: 0.2rem;
 }
 
-/* Slider card image */
+/* Mini card image */
 .slider-card-image {
   object-fit: cover;
   border-radius: 0.4rem;
 }
 
-/* Top Movies slider */
-
-/* Top Movies card */
-
-
-/* Top TV Series slider */
-
-/* Top TV Series card */
-
+/* ----------------------------- */
+/* Popular movies page           */
+/* ----------------------------- */
+.popular-movies-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  gap: 1.5rem;
+}
 
 /* ----------------------------- */
 /* Movie details page            */
@@ -451,10 +455,10 @@ body {
 /* Utility classes               */
 /* ----------------------------- */
 .container {
-  max-width: 1000px;
+  max-width: 120rem;
   width: 100%;
   margin-inline: auto;
-  padding-inline: 0 20px;
+  padding-inline: 1.5rem;
 }
 
 .section-mb {
