refactor: change popular movies page layout

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -222,7 +222,7 @@ body {
 /* ----------------------------- */
 /* Popular movies page           */
 /* ----------------------------- */
-.popular-movies-container {
+.popular-movies-wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   gap: 1.5rem;
