--- a/src/css/style.css
+++ b/src/css/style.css
@@ -219,6 +219,48 @@ body {
   border-radius: 0.4rem;
 }
 
+/* Loader */
+.loader {
+  position: fixed;
+  z-index: 999;
+  top: 50%;
+  right: 50%;
+  width: 4rem;
+  height: 4rem;
+  border: 8px solid #FFF;
+  border-bottom-color: hsl(var(--clr-green));
+  border-radius: 50%;
+  display: none;
+  animation: rotation 2s linear infinite;
+}
+
+/* Loader overlay */
+.loader-overlay {
+  position: fixed;
+  display: none;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.loader-overlay.show .loader,
+.loader-overlay.show {
+  display: inline-block;
+}
+
+
+@keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+} 
+
 /* ----------------------------- */
 /* Popular movies page           */
 /* ----------------------------- */
