--- a/src/css/style.css
+++ b/src/css/style.css
@@ -296,6 +296,21 @@ body {
   padding-right: 0.3rem;
 }
 
+/* Overlay image */
+.details-overlay-image {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 120%;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0.1;
+}
+
+
 /* Movie top information */
 .details-top {
   display: grid;
