--- a/src/css/style.css
+++ b/src/css/style.css
@@ -90,9 +90,9 @@ body {
 /* ------------------- */
 
 /* Hero slider */
-.hero-container {
+/* .hero-container {
   
-}
+} */
 
 .hero-slider {
   position: relative;
@@ -470,10 +470,6 @@ body {
   border: 0.1rem solid hsl(var(--clr-dark));
   width: 2.2rem;
   height: 2.2rem;
-}
-
-.fa-user {
-  
 }
 
 .review-image {
