--- a/src/css/style.css
+++ b/src/css/style.css
@@ -504,6 +504,54 @@ body {
   border-block-start: 1px solid hsla(var(--clr-gray), 0.3);
 }
 
+/* --------------------------- */
+/* Person details page         */
+/* --------------------------- */
+
+/* Credits */
+.credits-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
+  gap: 2rem;
+}
+
+.credits-item {
+  background-color: hsla(var(--clr-glass), .10);
+  padding: 1rem;
+  display: flex;
+  column-gap: 1rem;
+}
+
+.credits-item-top {
+  display: flex;
+  flex-direction: column;
+  margin-block-end: 0.5rem;
+}
+
+.credits-item-title {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.credit-poster {
+  max-width: 10rem;
+  min-width: 10rem;
+  height: 100%;
+  min-height: 15rem;
+  background-color: aliceblue;
+}
+
+.credit-poster img {
+  height: 100%;
+  object-fit: cover;
+}
+
+.credits-vote {
+  display: flex;
+  align-items: center;
+  margin-block-end: 0.8rem;
+}
+
 /* ----------------------------- */
 /* Utility classes               */
 /* ----------------------------- */
@@ -521,4 +569,17 @@ body {
 .navigation-link.active {
   color: hsl(var(--clr-green));
   text-shadow: hsl(var(--clr-green)) 1px 0 10px;
+}
+
+.no-image {
+  color: hsla(var(--clr-gray), 0.3);
+  font-size: 2rem;
+  font-weight: 700;
+  align-self: center;
+}
+
+.credit-poster:has(.no-image) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
