--- a/src/css/style.css
+++ b/src/css/style.css
@@ -553,6 +553,17 @@ body {
 }
 
 /* ----------------------------- */
+/* Search results page           */
+/* ----------------------------- */
+.search-results {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
+  gap: 2rem;
+}
+
+.search-results-item {}
+
+/* ----------------------------- */
 /* Utility classes               */
 /* ----------------------------- */
 .container {
