--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -57,6 +57,10 @@ img, picture, video, canvas, svg {
   max-width: 100%;
 }
 
+img {
+  object-fit: cover;
+}
+
 /*  Removed built-in form typography styles */
 input, button, textarea, select {
   font: inherit;
