--- a/src/css/style.css
+++ b/src/css/style.css
@@ -520,8 +520,7 @@ body {
 }
 
 .credit-poster {
-  max-width: 7rem;
-  height: 100%;
+  width: 5.4rem;
   background-color: aliceblue;
   border-radius: var(--rounded);
 }
@@ -537,15 +536,40 @@ body {
   margin-block-end: 0.8rem;
 }
 
+
+/* ------------------- */
+/* Common components   */
+/* ------------------- */
+.section-list-l {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
+  gap: 2rem;
+}
+
+.card-l {
+  background-color: hsla(var(--clr-glass), .10);
+  height: 10rem;
+  padding: 0.7rem;
+  display: flex;
+  column-gap: 1rem;
+  border-radius: var(--rounded);
+}
+
 /* ----------------------------- */
 /* Search results page           */
 /* ----------------------------- */
+.search-results {
+  gap: 1rem;
+}
+
 .search-results-item {
-  
+  height: 6rem;
+  gap: 0.6rem;
+  padding: 0.5rem;
 }
 
 .search-results-poster {
-  max-width: 7rem;
+  width: 3.4rem;
   height: 100%;
   background-color: aliceblue;
   border-radius: var(--rounded);
@@ -562,22 +586,8 @@ body {
   border-radius: var(--rounded);
 }
 
-/* ----------------------------- */
-/* Cards for credits         
-   and serach results sections   */
-/* ----------------------------- */
-.section-list-l {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
-  gap: 2rem;
-}
-
-.card-l {
-  background-color: hsla(var(--clr-glass), .10);
-  padding: 1rem;
-  display: flex;
-  column-gap: 1rem;
-  border-radius: var(--rounded);
+.no-image.search-no-image {
+  font-size: 0.6rem;
 }
 
 /* ----------------------------- */
@@ -603,9 +613,7 @@ body {
   color: hsla(var(--clr-gray), 0.3);
   font-size: 1rem;
   font-weight: 700;
-  padding: 1rem;
-  max-width: 7rem;
-  height: 100%;
+  padding: 0.2rem;
   background-color: aliceblue;
   border-radius: var(--rounded);
 }
