--- a/src/css/style.css
+++ b/src/css/style.css
@@ -494,7 +494,13 @@ body {
   text-shadow: #21242D 1px 0 10px;
 }
 
-.card-text {
+.card-text-top {
+  font-size: 0.75rem;
+  font-weight: 600;
+  margin-top: 0.2rem;
+}
+
+.card-text-bottom {
   font-size: 0.75rem;
   font-weight: 300;
   margin-top: 0.2rem;
@@ -577,6 +583,10 @@ body {
   border-radius: 1.2rem;
 }
 
+.filter-item-selected {
+
+}
+
 /* ----------------------------- */
 /* Search results page           */
 /* ----------------------------- */
@@ -591,25 +601,33 @@ body {
 
 .search-results-filter-item {
   border: 2px solid hsl(var(--clr-green));
+  background-color: hsla(var(--clr-glass), .12);
   padding: 0.2rem 0.5rem;
   font-weight: 600;
 }
 
+.search-filter-item-selected {
+  background-color: hsl(var(--clr-green));
+}
+
 .search-results {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   gap: 1rem;
 }
 
 .search-results-item {
-  height: 6rem;
+  max-height: 8rem;
   gap: 0.6rem;
   padding: 0.5rem;
 }
 
 .search-results-poster {
-  width: 3.3rem;
+  min-width: 4.5rem;
   height: 100%;
   background-color: aliceblue;
-  border-radius: var(--rounded);
+  border-radius: 0.46rem;
+  
 }
 
 .search-results-poster:has(.no-image) {
@@ -621,6 +639,7 @@ body {
 .search-results-image {
   height: 101%;
   border-radius: var(--rounded);
+  
 }
 
 .no-image.search-no-image {
