--- a/src/css/style.css
+++ b/src/css/style.css
@@ -88,6 +88,165 @@ body {
 }
 
 /* ------------------- */
+/* Common components   */
+/* ------------------- */
+/* Main title for pages */
+.title-page {
+  font-size: 3rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+/* Slider container */
+.slider-container {
+  display: flex;
+  gap: 1rem;
+  padding-block-start: 1.5rem;
+  overflow: hidden;
+}
+
+/* Mini card common styles */
+.card {
+  min-width: 12.5rem;
+  height: 100%;
+  padding: 0.7rem;
+  min-height: 22.8rem;
+  background-color: hsla(0, 0%, 100%, .20);
+  border-radius: var(--rounded);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(7.1px);
+  -webkit-backdrop-filter: blur(7.1px);
+}
+
+.card a {
+  display: inline-block;
+  min-height: 16.5rem;
+}
+
+.card-body {
+  padding-block-start: 0.5rem;
+}
+
+.card-title {
+  font-weight: 800;
+  font-size: 0.9rem;
+  color: hsl(var(--clr-light));
+  text-shadow: #21242D 1px 0 10px;
+}
+
+.card-text {
+  font-size: 0.75rem;
+  font-weight: 300;
+  margin-top: 0.2rem;
+}
+
+.card-text-top {
+  font-size: 0.75rem;
+  font-weight: 600;
+  margin-top: 0.2rem;
+}
+
+.card-text-bottom {
+  font-size: 0.75rem;
+  font-weight: 300;
+  margin-top: 0.2rem;
+}
+
+/* Mini card image */
+.slider-card-image {
+  border-radius: var(--rounded);
+  min-height: inherit;
+}
+
+/* Loader */
+.loader {
+  position: fixed;
+  z-index: 999;
+  top: 50%;
+  right: 50%;
+  width: 4rem;
+  height: 4rem;
+  border: 8px solid #FFF;
+  border-bottom-color: hsl(var(--clr-green));
+  border-radius: var(--rounded);
+  display: none;
+  animation: rotation 2s linear infinite;
+}
+
+/* Loader overlay */
+.loader-overlay {
+  position: fixed;
+  display: none;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.loader-overlay.show .loader,
+.loader-overlay.show {
+  display: inline-block;
+}
+
+
+@keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+}
+
+.section-list-l {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
+  gap: 2rem;
+}
+
+.card-l {
+  background-color: hsla(var(--clr-glass), .10);
+  height: 10rem;
+  padding: 0.7rem;
+  display: flex;
+  column-gap: 1rem;
+  border-radius: var(--rounded);
+}
+
+/* Filters */
+.filters {
+  margin-bottom: 1.2rem;
+}
+
+.filters-list {
+  display: flex;
+  column-gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.filter-item {
+  padding: 0.5rem 0.8rem;
+  font-weight: 600;
+  background-color: hsl(var(--clr-light));
+  color: hsl(var(--clr-dark));
+  border-radius: 1.2rem;
+}
+
+.filter-item-selected {
+
+}
+
+.reset-filters {
+  background: transparent;
+  color: hsl(var(--clr-green));
+  font-size: 0.9rem;
+  font-weight: 600;
+  border: none;
+}
+
+/* ------------------- */
 /* Home page           */
 /* ------------------- */
 
@@ -126,7 +285,7 @@ body {
 
 .hero-item-content {
   position: absolute;
-  max-width: 20rem;
+  max-width: 25rem;
   z-index: 1;
   color: hsl(var(--clr-light));
   top: 10%;
@@ -153,6 +312,8 @@ body {
 
 .top-title {
   position: relative;
+  font-size: 1.5rem;
+  font-weight: 600;
   padding-left: 0.8rem;
 }
 
@@ -183,6 +344,21 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   gap: 1.5rem;
+}
+
+.popular-card-image {
+  min-height: inherit;
+  border-radius: var(--rounded);
+}
+
+.popular-show-card,
+.popular-movie-card, 
+.popular-person-card {
+ padding: 1rem;
+}
+
+.popular-show-card a {
+  min-height: 22rem;
 }
 
 /* ----------------------------- */
@@ -449,142 +625,6 @@ body {
   display: flex;
   align-items: center;
   margin-block-end: 0.8rem;
-}
-
-
-/* ------------------- */
-/* Common components   */
-/* ------------------- */
-/* Main title for pages */
-.title-page {
-  font-size: 3rem;
-  font-weight: 600;
-  margin-bottom: 1rem;
-}
-
-/* Slider container */
-.slider-container {
-  display: flex;
-  gap: 1rem;
-  padding-block-start: 2rem;
-  overflow: hidden;
-}
-
-/* Mini card common styles */
-.card {
-  min-width: 12.5rem;
-  height: 100%;
-  padding: 0.7rem;
-  min-height: 22rem;
-  background-color: hsla(0, 0%, 100%, .20);
-  border-radius: var(--rounded);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(7.1px);
-  -webkit-backdrop-filter: blur(7.1px);
-}
-
-.card-body {
-  padding-block-start: 0.5rem;
-}
-
-.card-title {
-  font-weight: 800;
-  font-size: 0.9rem;
-  color: hsl(var(--clr-light));
-  text-shadow: #21242D 1px 0 10px;
-}
-
-.card-text-top {
-  font-size: 0.75rem;
-  font-weight: 600;
-  margin-top: 0.2rem;
-}
-
-.card-text-bottom {
-  font-size: 0.75rem;
-  font-weight: 300;
-  margin-top: 0.2rem;
-}
-
-/* Mini card image */
-.slider-card-image {
-  border-radius: var(--rounded);
-}
-
-/* Loader */
-.loader {
-  position: fixed;
-  z-index: 999;
-  top: 50%;
-  right: 50%;
-  width: 4rem;
-  height: 4rem;
-  border: 8px solid #FFF;
-  border-bottom-color: hsl(var(--clr-green));
-  border-radius: var(--rounded);
-  display: none;
-  animation: rotation 2s linear infinite;
-}
-
-/* Loader overlay */
-.loader-overlay {
-  position: fixed;
-  display: none;
-  z-index: 10;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.loader-overlay.show .loader,
-.loader-overlay.show {
-  display: inline-block;
-}
-
-
-@keyframes rotation {
-  0% {
-      transform: rotate(0deg);
-  }
-  100% {
-      transform: rotate(360deg);
-  }
-}
-
-.section-list-l {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
-  gap: 2rem;
-}
-
-.card-l {
-  background-color: hsla(var(--clr-glass), .10);
-  height: 10rem;
-  padding: 0.7rem;
-  display: flex;
-  column-gap: 1rem;
-  border-radius: var(--rounded);
-}
-
-/* Filters */
-.filters-list {
-  display: flex;
-  column-gap: 1.2rem;
-  margin-bottom: 2rem;
-}
-
-.filter-item {
-  padding: 0.5rem 0.8rem;
-  font-weight: 600;
-  background-color: hsl(var(--clr-light));
-  color: hsl(var(--clr-dark));
-  border-radius: 1.2rem;
-}
-
-.filter-item-selected {
-
 }
 
 /* ----------------------------- */
