--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -66,6 +66,10 @@ input, button, textarea, select {
   font: inherit;
 }
 
+button {
+  cursor: pointer;
+}
+
 /* Avoid text overflows */
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
