--- a/src/css/style.css
+++ b/src/css/style.css
@@ -158,6 +158,11 @@ body {
   min-height: inherit;
 }
 
+/* Pagintaion */
+.page-counter {
+  margin-block-start: 0.7rem;
+}
+
 /* Loader */
 .loader {
   position: fixed;
@@ -373,6 +378,8 @@ body {
 
 .btn {
   display: inline-flex;
+  color: hsl(var(--clr-light));
+  border: none;
   align-items: center;
   background-color: hsl(var(--clr-green));
   padding: 0.6rem;
@@ -630,8 +637,12 @@ body {
 /* ----------------------------- */
 /* Search results page           */
 /* ----------------------------- */
+.search-results-heading {
+  margin-block-end: 1.5rem;
+}
+
 .search-results-filters {
-  margin-block-end: 2rem;
+  margin-block-end: 1.5rem;
 }
 
 .search-results-filters-list {
@@ -654,6 +665,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   gap: 1rem;
+  margin-block-end: 1rem;
 }
 
 .search-results-item {
